[package]
name = "gb"
version = "0.1.0"
edition = "2021"

# [build]
# target = "wasm32-unknown-unknown"

[rust]
lld = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
pixels = "0.13.0"
winit = "0.28"
# winit_input_helper = "0.15.0"

[workspace]
members = ["run-wasm"]
